infra/k8s/posts.old.yml
apiVersion: v1
kind: Pod
metadata:
  name: posts
spec:
  containers:
    - name: posts
      image: app/posts:0.0.1
